--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,17 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LinkyiShop"
-        tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config">
+        tools:targetApi="31">
+        <activity
+            android:name=".ui.newPassword.NewPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.lupaPassword.LupaPasswordActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.otp.OtpVerifActivity"
             android:exported="false" />
@@ -36,7 +42,7 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="false"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
