--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.LinkyiShop"
         tools:targetApi="31">
         <activity
+            android:name=".ui.detailProduct.DetailProductActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.newPassword.NewPasswordActivity"
             android:exported="false" />
         <activity
