--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,6 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LinkyiShop"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.product.UpdateProductActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.updatePassword.UpdatePasswordActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.aktivasiToko.AktivasiTokoActivity"
             android:exported="false" />
