--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,19 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/linkyi_logo"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LinkyiShop"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.tema.TemaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.aktivasiToko.UpdateStoreActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.linkyi.AddLinkyiActivity"
             android:exported="false" />
